--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "travel-app",
+  "name": "travel-app-next",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "material-icons": "^1.10.9",
     "next": "12.1.5",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "sass": "^1.51.0"
   },
   "devDependencies": {
     "eslint": "8.14.0",
