--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "classnames": "^2.3.1",
     "material-icons": "^1.10.9",
     "next": "12.1.5",
     "react": "18.1.0",
